Event publisher added to the class to delete images asynchronously from S3 along with DB, and some minor changes made around methods